--- a/index.html
+++ b/index.html
@@ -273,7 +273,7 @@
                 <div class="col-lg-6 d-none d-lg-block">
                     <div class="d-flex align-items-center" style="height: 100vh;">
                         <div class="container center-content">
-                            <img class="hoverobject" src="https://i.imgur.com/vynuB6E.png" data-value="-5">
+                            <img class="hoverobject" src="https://i.imgur.com/VNwzVbm.png" data-value="-5">
                         </div>
                     </div>
                 </div>
